Adding debug message for when scheduler takes a long time to get a client